--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 absl-py==2.1.0
+altgraph @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/altgraph-0.17.2-py2.py3-none-any.whl
 astunparse==1.6.3
 blinker==1.8.1
 certifi==2024.2.2
@@ -11,18 +12,22 @@ Flask==3.0.3
 flatbuffers==24.3.25
 fonttools==4.51.0
 fsspec==2024.3.1
+future @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/future-0.18.2-py3-none-any.whl
 gast==0.5.4
 google-pasta==0.2.0
 grpcio==1.62.2
 h5py==3.11.0
 huggingface-hub==0.22.2
 idna==3.7
+importlib_metadata==7.1.0
+importlib_resources==6.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.3
 joblib==1.4.0
 keras==3.3.3
 kiwisolver==1.4.5
 libclang==18.1.1
+macholib @ file:///System/Volumes/Data/SWE/Apps/DT/BuildRoots/BuildRoot11/ActiveBuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-141/macholib-1.15.2-py2.py3-none-any.whl
 Markdown==3.6
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
@@ -48,11 +53,11 @@ rich==13.7.1
 safetensors==0.4.3
 scikit-learn==1.4.1.post1
 scipy==1.13.0
-setuptools==69.5.1
 six==1.16.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
+tensorflow-io-gcs-filesystem==0.37.0
 termcolor==2.4.0
 tf_keras==2.16.0
 threadpoolctl==3.4.0
@@ -63,5 +68,5 @@ typing_extensions==4.11.0
 tzdata==2024.1
 urllib3==2.2.1
 Werkzeug==3.0.2
-wheel==0.43.0
 wrapt==1.16.0
+zipp==3.18.1
