--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ rich==13.7.1
 safetensors==0.4.3
 scikit-learn==1.4.1.post1
 scipy==1.13.0
+sentencepiece==0.2.0
 six==1.16.0
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
