--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,9 @@ MarkupSafe==2.1.5
 matplotlib==3.8.4
 mdurl==0.1.2
 ml-dtypes==0.3.2
+mpmath==1.3.0
 namex==0.0.8
+networkx==3.3
 numpy==1.26.4
 opt-einsum==3.3.0
 optree==0.11.0
@@ -50,6 +52,7 @@ scikit-learn==1.4.1.post1
 scipy==1.13.0
 setuptools==69.5.1
 six==1.16.0
+sympy==1.12
 tensorboard==2.16.2
 tensorboard-data-server==0.7.2
 tensorflow==2.16.1
@@ -58,6 +61,9 @@ termcolor==2.4.0
 tf_keras==2.16.0
 threadpoolctl==3.4.0
 tokenizers==0.19.1
+torch==2.3.0
+torchaudio==2.3.0
+torchvision==0.18.0
 tqdm==4.66.2
 transformers==4.40.1
 typing_extensions==4.11.0
